chrome/browser/chromeos/accessibility/accessibility_manager.h
@@ -42,7 +42,6 @@ namespace chromeos {
 class AccessibilityExtensionLoader;
 class AccessibilityHighlightManager;
 class ScopedKeyboardStateSetter;
-class SelectToSpeakEventHandler;
 class SwitchAccessEventHandler;
 
 enum AccessibilityNotificationType {
@@ -438,9 +437,6 @@ class AccessibilityManager
   std::unique_ptr<AccessibilityExtensionLoader> chromevox_loader_;
 
   std::unique_ptr<AccessibilityExtensionLoader> select_to_speak_loader_;
-
-  std::unique_ptr<chromeos::SelectToSpeakEventHandler>
-      select_to_speak_event_handler_;
 
   std::unique_ptr<AccessibilityExtensionLoader> switch_access_loader_;
 
